@@ -1,3 +1,7 @@
+27 Mar 2019
+
+Export results in phy-compatible format with jrc export-phy /path/to/your/config.prm
+
 20 Mar 2019 (4.0.0-beta release)
 
 - Bugfix: import-ksort didn't use the correct sites for imported spikes; this has been fixed.
